test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extern_block_scope_variable.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: outer
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CVar: 
                  TIdentifier: outer
                  None: 
                CCompound: 
                  CB: 
                    List[3]: 
                      CD: 
                        CVarDecl: 
                          CVariableDeclaration: 
                            TIdentifier: foo
                            None: 
                            Int: 
                            CExtern: 
                      CD: 
                        CVarDecl: 
                          CVariableDeclaration: 
                            TIdentifier: foo
                            None: 
                            Int: 
                            CExtern: 
                      CS: 
                        CReturn: 
                          CVar: 
                            TIdentifier: foo
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 3
            None: 
          None: 
        Int: 
        None: 
